[tool.poetry]
name = "claude-mcp-sandbox"
version = "0.1.0"
description = ""
authors = ["M Afif Nur Azizi <grithaqq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcp = {extras = ["cli"], version = "^1.8.0"}
httpx = "^0.28.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
